--- a/SingleSite_SingleDisturb.Rmd
+++ b/SingleSite_SingleDisturb.Rmd
@@ -583,10 +583,13 @@ legend("topright",legend=c("EnKF, no disturb","EnKF, disturb","Multinomial","dat
 
 ## Todo
 -   Tweak model to have a simple C budget -- where does the C go when the model doesn't assimilate disturbance?
--   Apply to SIPNET SDA
 -   Calibrate state and transition probabilities for a single region
 -   Upgrade code to multinomial
 -   Add PFT switching
+-   Apply to SIPNET SDA
+    - version of code into PEcAn
+    - test coupling to SIPNET
+-   Real-world data examples
 -   Add ensemble weighting so that we can manage ensemble sizes
 -   Add "fusion" if a case becomes too rare to worry about
 -   Think about whether we need to add LULC state to state variables & how LULC state would be assimilated
