--- a/SingleSite_SingleDisturb_MultiPool.Rmd
+++ b/SingleSite_SingleDisturb_MultiPool.Rmd
@@ -80,7 +80,7 @@ for(i in 1:ne){
   Na[i,] = VSEM(as.numeric(Theta[par[i],]),PAR = PAR[met[i],])[nt,2:4]
 }
 Na.orig = Na
-Nmu = Nf = Na*NA
+Nmu = NmuK = NfK = Nf = Na*NA
 par(mfrow=c(1,3))
 hist(Na[,1],main="Cleaf")
 hist(Na[,2],main="Csoil")
@@ -102,6 +102,7 @@ p.dist = 0.05
 ## storage
 Dbar = 0
 Analysis <- Forecast <- list()
+Forecast.KD = Analysis.KD = list() ## EnKF with Disturbance
 removal = matrix(0,ne,NT)
 
 ## pseudodata
@@ -142,17 +143,23 @@ model{
   Y ~ dmnorm(n,R)                       ## Observation error
 }"
 
+Na <- NaK <- Na.orig
+THETAK <- THETA
 for(t in 1:NT){
   
   tsel <- (t-1)*365 + 1:365               ## Select days from driver files
   
   ## update IC
-  THETA[,9:11] <- Na
+  THETA[,9:11]  <- Na    ## Multinomial
+  THETAK[,9:11] <- NaK  ## EnKF w/ disturbance
   
   ## Forecast 
   for(i in 1:ne){
-    Nmu[i,] = VSEM(THETA[i,],PAR = PAR[met[i],tsel])[365,2:4] ## deterministic simulation
-    Nf[i,]  = mvtnorm::rmvnorm(1,Nmu[i,],Q) ## process error
+    Nmu[i,]  = VSEM(THETA[i,], PAR = PAR[met[i],tsel])[365,2:4] ## deterministic simulation
+    NmuK[i,] = VSEM(THETAK[i,],PAR = PAR[met[i],tsel])[365,2:4] ## deterministic simulation
+    epsilon  = mvtnorm::rmvnorm(1,rep(0,3),Q)                   ## process error  ** shared between versions **
+    Nf[i,]   = Nmu[i,]  + epsilon
+    NfK[i,]  = NmuK[i,] + epsilon
   }
   
   ## Disturbance
@@ -161,18 +168,25 @@ for(t in 1:NT){
   if(sum(!sel)>2){
     sel.dist = which(!sel)
     for(j in sel.dist){                      ## run disturbance model
-      Nf[j,] = disturbance(Nf[j,])
+      Nf[j,]  = disturbance(Nf[j,])
+      NfK[j,] = disturbance(NfK[j,])
     }
-    mufD = colMeans(Nf[!sel,])
+    mufD  = colMeans(Nf[!sel,])
     pfD = solve(diag(c(0.15,0.5,0.25)^2)) #try(solve(var(Nf[!sel,])))
   } 
   if(sum(!sel) <= 2 || class(pfD) == "try-error") {   ## backup values if the ensemble stats fail
-      mufD = c(mu0[1],mean(Nf[,2]),mu0[2])             
+      mufD = c(mu0[1], mean(Nf[,2]),  mu0[2])            
       pfD  = solve(diag(c(0.15,0.5,0.25)^2))
   }
   Nf <- tobit(Nf)
   
-  
+  ## EnKF forecast stats
+  NfK <- tobit(NfK)
+  mufK = colMeans(NfK)
+  PfK  = var(NfK)
+  pfK  = solve(PfK)             ## Not disturbed forecast precision
+  Forecast.KD[[t]] <- list(d.prior=d.prior,Nf=NfK,muf=mufK,pf=pfK)
+
   ## priors
   priors <- list(p    = mean(d.prior),         ## disturbance rate
                  mufN = colMeans(Nf[sel,]),    ## Not disturbed forecast means
@@ -197,6 +211,16 @@ for(t in 1:NT){
   ## draw new IC     *** REPLACE WITH ENSEMBLE ADJUSTMENT ***
   sel.ic <- sample.int(nrow(dat), ne, replace=TRUE)
   Na <- dat[sel.ic,nsel]
+  
+  ## EnKF Analysis
+  I = H <- diag(rep(1,3))
+  K <- PfK %*% t(H) %*% solve(H%*%PfK%*%t(H) + R)
+  muaK <- mufK + K%*%(No[t,] - mufK) 
+  PaK <- (I-K %*% H)%*%PfK    
+  paK = solve(PaK)
+  NaK <- PEcAn.assim.sequential::adj.ens(Pf = PfK,X = NfK,mu.f = mufK,mu.a = muaK,Pa = PaK)
+  Analysis.KD[[t]] <- list(mua=muaK,pa=paK,Pa=PaK,Na=NaK)
+  
 }
 
 ```
@@ -240,8 +264,8 @@ for(t in 1:NT){
     Nf[i,]  = mvtnorm::rmvnorm(1,Nmu[i,],Q) ## process error
   }
   
-  muf = colMeans(Nf[sel,])    ## Not disturbed forecast means
-  Pf  = var(Nf[sel,])
+  muf = colMeans(Nf)    ## Not disturbed forecast means
+  Pf  = var(Nf)
   pf  = solve(Pf)             ## Not disturbed forecast precision
   Forecast.EnKF[[t]] <- list(d.prior=d.prior,Nf=Nf,muf=muf,pf=pf)
   
@@ -252,8 +276,9 @@ for(t in 1:NT){
   Pa <- (I-K %*% H)%*%Pf    
   pa = solve(Pa)
   
-  ## draw new IC     *** REPLACE WITH ENSEMBLE ADJUSTMENT ***
-  Na <- mvtnorm::rmvnorm(ne,mua,Pa)
+  ## draw new IC     *** REPLACED WITH ENSEMBLE ADJUSTMENT ***
+#  Na <- mvtnorm::rmvnorm(ne,mua,Pa)
+  Na <- PEcAn.assim.sequential::adj.ens(Pf = Pf,X = Nf,mu.f = muf,mu.a = mua,Pa = Pa)
   
   ## save Analysis posterior
   Analysis.EnKF[[t]] <- list(mua=mua,pa=pa,Pa=Pa,Na=Na)
