Methods outline to methods.Rmd

--- a/methods.Rmd
+++ b/methods.Rmd
@@ -1,1 +1,25 @@
 # Methods
+
+1. Illustration of problem
+2. Derivation Multinomial
+
+Conceptual figure
+
+3. Simulated data experiments (known disturbance)
+  + Single Site, Single Disturbance
+  + SSSD Multi Pool
+  + SS Multi-Disturbance w/ PFT switching
+  + Simple Multi-site: spatial cov
+4. Real-world examples
+  + Describe Model & PEcAn
+  + Calibrate state-and-transition prior
+    + Landtrendr
+    ftp://islay.ceoas.oregonstate.edu/change_agent_attribution
+  + Applications: PNW
+    + Logging
+    + Fire
+    + Land use transition (forest -> non?)
+
+Email to Robert:
+
+I need to extract some example time series for single pixels (e.g. AGB product) where the disturbance it is far enough in the past that there’s an interesting recovery trajectory but also where it’s not so early (so that the data assimilation has time to come into steady-state before the disturbance). From Landtrendr itself I’m looking to know when you attributed the year, severity, and cause so we can see if our assimilation is getting it “right”. Bonus would be if you could suggest places where you know there’s ground data we could use to validate the model (disturbances at flux towers, LTER sites, FIA plots, etc).
