--- a/SingleSite_SingleDisturb_MultiPool.Rmd
+++ b/SingleSite_SingleDisturb_MultiPool.Rmd
@@ -8,6 +8,7 @@ output: html_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(BayesianTools)
+library(magrittr)
 set.seed(42)
 ```
 
@@ -18,6 +19,8 @@ set.seed(42)
 ## helper functions
 
 ```{r}
+source("multi.ens.adj.R")
+
 tobit <- function(x){
   x[x < 0] <- 0
   x
@@ -208,9 +211,20 @@ for(t in 1:NT){
   nsel <- grep(pattern="^n",x=colnames(dat))
   Analysis[[t]] <- dat
   
-  ## draw new IC     *** REPLACE WITH ENSEMBLE ADJUSTMENT ***
-  sel.ic <- sample.int(nrow(dat), ne, replace=TRUE)
-  Na <- dat[sel.ic,nsel]
+  ## draw new IC
+  Na <- multi.ens.adj(
+          Xf   = Nf,
+          cf   = d.prior,
+          mu.f = rbind(priors$mufN,priors$mufD),
+          Pf   = abind::abind(solve(priors$pfN),
+                 solve(priors$pfD),
+                 along=3),
+          Xa = dat[,nsel],
+          ca = dat[,"D"])
+  Ca <- Na[,1] ## updated class assignments
+  Na <- tobit(Na[,-1])
+#  sel.ic <- sample.int(nrow(dat), ne, replace=TRUE)
+#  Na <- dat[sel.ic,nsel]
   
   ## EnKF Analysis
   I = H <- diag(rep(1,3))
@@ -218,7 +232,7 @@ for(t in 1:NT){
   muaK <- mufK + K%*%(No[t,] - mufK) 
   PaK <- (I-K %*% H)%*%PfK    
   paK = solve(PaK)
-  NaK <- PEcAn.assim.sequential::adj.ens(Pf = PfK,X = NfK,mu.f = mufK,mu.a = muaK,Pa = PaK)
+  NaK <- PEcAn.assim.sequential::adj.ens(Pf = PfK,X = NfK,mu.f = mufK,mu.a = muaK,Pa = PaK) %>% as.matrix()
   Analysis.KD[[t]] <- list(mua=muaK,pa=paK,Pa=PaK,Na=NaK)
   
 }
@@ -276,9 +290,10 @@ for(t in 1:NT){
   Pa <- (I-K %*% H)%*%Pf    
   pa = solve(Pa)
   
-  ## draw new IC     *** REPLACED WITH ENSEMBLE ADJUSTMENT ***
-#  Na <- mvtnorm::rmvnorm(ne,mua,Pa)
-  Na <- PEcAn.assim.sequential::adj.ens(Pf = Pf,X = Nf,mu.f = muf,mu.a = mua,Pa = Pa)
+  ## draw new IC
+  #  Na <- mvtnorm::rmvnorm(ne,mua,Pa)
+  Na <- PEcAn.assim.sequential::adj.ens(
+    Pf = Pf,X = Nf,mu.f = muf,mu.a = mua,Pa = Pa)
   
   ## save Analysis posterior
   Analysis.EnKF[[t]] <- list(mua=mua,pa=pa,Pa=Pa,Na=Na)
