--- a/SingleSite_SingleDisturb_MultiPool.Rmd
+++ b/SingleSite_SingleDisturb_MultiPool.Rmd
@@ -75,7 +75,7 @@ for(i in 1:11){
 
 ```{r}
 ## spin up
-ne = 100
+ne = 200
 met = sample.int(nd,ne,replace=TRUE)
 par = sample.int(np,ne,replace=TRUE)
 Na <- matrix(NA,ne,3)
@@ -158,8 +158,10 @@ for(t in 1:NT){
   
   ## Forecast 
   for(i in 1:ne){
-    Nmu[i,]  = VSEM(THETA[i,], PAR = PAR[met[i],tsel])[365,2:4] ## deterministic simulation
-    NmuK[i,] = VSEM(THETAK[i,],PAR = PAR[met[i],tsel])[365,2:4] ## deterministic simulation
+    fx       = VSEM(THETA[i,], PAR = PAR[met[i],tsel]) ## deterministic simulation
+    Nmu[i,]  =  fx[365,2:4]                         ## state variables at time of assim
+    fxK      = VSEM(THETAK[i,],PAR = PAR[met[i],tsel]) ## deterministic simulation
+    NmuK[i,] = fxK[365,2:4] ## deterministic simulation
     epsilon  = mvtnorm::rmvnorm(1,rep(0,3),Q)                   ## process error  ** shared between versions **
     Nf[i,]   = Nmu[i,]  + epsilon
     NfK[i,]  = NmuK[i,] + epsilon
@@ -209,7 +211,6 @@ for(t in 1:NT){
   ## update parameters & save Analysis posterior
   dat = as.matrix(jdat)
   nsel <- grep(pattern="^n",x=colnames(dat))
-  Analysis[[t]] <- dat
   
   ## draw new IC
   Na <- multi.ens.adj(
@@ -225,6 +226,10 @@ for(t in 1:NT){
   Na <- tobit(Na[,-1])
 #  sel.ic <- sample.int(nrow(dat), ne, replace=TRUE)
 #  Na <- dat[sel.ic,nsel]
+  Analysis[[t]] <- list(MCMC=dat,
+                        Na = Na,
+                        Ca = Ca)
+
   
   ## EnKF Analysis
   I = H <- diag(rep(1,3))
@@ -239,11 +244,15 @@ for(t in 1:NT){
 
 ```
 
+
+### time series
+
 ```{r}
-pool.names=c("Cleaf","Csoil","Croot")
+pool.names=c("Cleaf","Csoil","Cstem")
 for(i in 1:3){
   
-  CI.Na = sapply(X = Analysis,function(x){
+  CI.Na = sapply(X = Analysis,function(y){
+    x = y$MCMC
     sel.n = which(colnames(x) == paste0("n[",i,"]"))
     quantile(x[,sel.n],c(0.025,0.5,0.975))
   })
@@ -259,7 +268,29 @@ for(i in 1:3){
   lines(Ntrue[,i],lty=2,lwd=2)
 }
 ```
+### Ensemble adj at time of disturbance
 
+```{r,fig.asp=1,fig.width=3}
+#par(mfrow=c(1,3))
+
+plot(Analysis[[10]]$Na[,1],Analysis[[10]]$Na[,3],pch="+",col=ecoforecastR::col.alpha("red",alpha=0.5),
+     ylim=range(Forecast[[10]]$Nf[,3]),
+     xlim=range(Forecast[[10]]$Nf[,1]),
+     xlab=pool.names[1],ylab=pool.names[3],
+     cex.lab=1.25,asp = 1)
+points(Forecast[[10]]$Nf[,1],Forecast[[10]]$Nf[,3],cex=0.5)
+points(No[10,1],No[10,3],cex=3,col=ecoforecastR::col.alpha("purple",alpha = 0.75),pch=18)
+
+## ensemble adjustment
+sel.a=sample.int(ne,10)
+arrows(Forecast[[10]]$Nf[sel.a,1],Forecast[[10]]$Nf[sel.a,3],
+       Analysis[[10]]$Na[sel.a,1],Analysis[[10]]$Na[sel.a,3],length = 0.1,lwd = 0.5)   
+legend("topleft",
+       legend=c("Forecast","Analysis","Data"),
+       pch=c(1,3,18),col=c(1,2,"purple"),
+       cex = 1.5)
+
+```
 ## EnKF, no disturbance
 
 ```{r,echo=FALSE}
