--- a/SingleSite_MultiDisturb_MultiPool_MultiPFT.Rmd
+++ b/SingleSite_MultiDisturb_MultiPool_MultiPFT.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Single Site, Multiple Disturbance, MultiPool"
+title: "Single Site, Multiple Disturbance, MultiPool, Multi PFT"
 author: "Mike Dietze"
 date: "11/18/2020"
 output: html_document
@@ -38,23 +38,33 @@ for(i in 1:nd){
 ## Parameters
 refPars <- VSEMgetDefaults()
 refPars$lower[9:11] = 1
+pft1 <- refPars$best; pft1[7] = pft1[7]*10
+refPars$upper[7] =  refPars$upper[7]*10
 np = 50
 sigmaP = diag((refPars$upper - refPars$lower)/10)^2 ## assume range is +/- 5 SD
-Theta <- as.data.frame(mvtnorm::rmvnorm(np,refPars$best,sigmaP))
-colnames(Theta) <- rownames(refPars)
+epsilon <- mvtnorm::rmvnorm(np,rep(0,nrow(sigmaP)),sigmaP)
+Theta <- list()
+Theta[[1]] <- as.data.frame(t(pft1         + t(epsilon))) ## PFT 1
+Theta[[2]] <- as.data.frame(t(refPars$best + t(epsilon))) ## PFT 2
+colnames(Theta[[1]]) <- rownames(refPars)
+colnames(Theta[[2]]) <- rownames(refPars)
 par(mfrow=c(3,4))
 for(i in 1:11){
-  Theta[Theta[,i] < refPars$lower[i] , i] <- refPars$lower[i]
-  Theta[Theta[,i] > refPars$upper[i] , i] <- refPars$upper[i]
-  hist(Theta[,i],main=colnames(Theta)[i])
+  for(p in 1:2){
+    Theta[[p]][Theta[[p]][,i] < refPars$lower[i] , i] <- refPars$lower[i]
+    Theta[[p]][Theta[[p]][,i] > refPars$upper[i] , i] <- refPars$upper[i]
+  }
+  hist(Theta[[1]][,i],main=colnames(Theta[[1]])[i],probability = TRUE)
+  lines(density(Theta[[2]][,i]))
 }
+pft.f = pft.a = rep(1,ne)
 
 ## initial conditions
 met = sample.int(nd,ne,replace=TRUE)
 par = sample.int(np,ne,replace=TRUE)
 Na <- matrix(NA,ne,3)
 for(i in 1:ne){
-  Na[i,] = VSEM(as.numeric(Theta[par[i],]),PAR = PAR[met[i],])[nt,2:4]
+  Na[i,] = VSEM(as.numeric(Theta[[1]][par[i],]),PAR = PAR[met[i],])[nt,2:4]
 }
 Na.orig = Na
 par(mfrow=c(1,3))
@@ -63,28 +73,33 @@ hist(Na[,2],main="Csoil")
 hist(Na[,3],main="Cstem")
 ```
 
-# Multinomial with distinct disturbances
+# Multinomial with distinct disturbances w/ different PFTs
 
 ## set up storage, parameters, pseudodata
 ```{r}
 ## hard coded 
 Q = diag(c(0.1,0.1,0.1)) ## process error
-R = diag(c(.25,10,1))      ## observation error
-THETA <- as.matrix(Theta[par,]) ## ensemble parameters
+R = diag(c(.25,10,.5))      ## observation error
+THETA1 <- as.matrix(Theta[[1]][par,]) ## ensemble parameters
+THETA2 <- as.matrix(Theta[[1]][par,]) 
+THETA  <- THETA1
+THETA[pft.f == 2,] <- THETA2[pft.f==2,]
 
 ## disturbance
-mu0 <- matrix(c(0.1,0.1,
-                0.1,0.95),2,2)    ## mean leaf & stem biomass after disturbance as % of original
-V1  <- diag(c(0.15,0.25))^2       ## var in post disturbance leaf and stem biomass (one for each type)
+       ## mean leaf & stem biomass after disturbance as % of original
+mu0 <- matrix(c(0.1,0.05,          ## removal, switch to PFT2
+                0.1,0.95),2,2)     ## defoliation, PFT1
+V1  <- diag(c(0.15,0.20))^2       ## var in post disturbance leaf and stem biomass (one for each type)
 V2  <- diag(c(0.15,0.01))^2
 V0  <- abind::abind(V1,V2,along=3)       ## combine covs
-alloc.soil = 0.25        ## fraction of removed C that goes in the soil
+alloc.soil = 0.25          ## fraction of removed C that goes in the soil
 p.dist = c(0.9,0.05,0.05)  ## Multinomial transition probability; first is no change
+dist.pft = c(0,2,0)        ## PFT to assign post-disturbance; 0 = no change
 
 ## storage
 Dbar = 0
 Analysis <- Forecast <- list()
-Nmu = NmuK = NfK = Nf = Na*NA
+Nmu = Nf = Na*NA
 
 ## pseudodata
 No = matrix(NA,NT,3)                   ## storage for observed state
@@ -92,7 +107,7 @@ Ntrue = matrix(NA,NT,3)                ## storage for latent "true" state
 true = 42                              ## reference ensemble member
 D.true = rep(0,NT)                     ## true disturbance timeseries
 D.true[10] = 1                         ## prescribe a disturbance
-refpar = as.numeric(Theta[par[true],]) ## grab the "true" parameters
+refpar = as.numeric(Theta[[1]][par[true],]) ## grab the "true" parameters
 refpar[9:11] = Na[true,]               ## set initial biomass pools
 for(t in 1:NT){
   tsel <- (t-1)*365 + 1:365            ## select 1 yr of met  
@@ -100,6 +115,7 @@ for(t in 1:NT){
   ref.f  = mvtnorm::rmvnorm(1,ref.mu,Q)## process error
   if(D.true[t]){
       ref.f = disturbance2(ref.f,type=D.true[t])
+      refpar = as.numeric(Theta[[2]][par[true],]) ## switch PFT parameters
   }
   ref.f = tobit(ref.f)
   refpar[9:11] = ref.f                 ## update IC for next iteration
@@ -137,7 +153,10 @@ for(t in 1:NT){
   
   tsel <- (t-1)*365 + 1:365               ## Select days from driver files
   
-  ## update IC
+  ## update IC & PFT
+  pft.f = pft.a
+  THETA  <- THETA1
+  THETA[pft.f == 2,] <- THETA2[pft.f==2,]
   THETA[,9:11]  <- Na    ## Multinomial
 
   ## Forecast 
@@ -159,9 +178,12 @@ for(t in 1:NT){
       muf[,d]  = colMeans(Nf[sel.dist,])
       pf[,,d] =  try(solve(var(Nf[sel.dist,])))
     } 
-    if(sum(sel.dist) <= 3 || class(pfD) == "try-error") {   ## backup values if the ensemble stats fail
+    if(sum(sel.dist) <= 3 || class(pf) == "try-error") {   ## backup values if the ensemble stats fail
       muf[,d] = colMeans(Nf[d.class==1,])*c(mu0[1,d-1],1,mu0[2,d-1])
       pf[,,d]  = solve(diag(c(0.15,0,0.15)^2))
+    }
+    if(dist.pft[d] > 0){  ## some disturbances switch PFT
+      pft.f[sel.dist] <- dist.pft[d]
     }
   }
   ## set undisturbed
@@ -175,14 +197,14 @@ for(t in 1:NT){
                  muf = muf,    ## forecast means
                  pf  = pf      ## forecast precision
   )
-  Forecast[[t]] <- c(list(d.prior=d.prior,Nf=Nf),priors)
+  Forecast[[t]] <- c(list(d.prior=d.prior,Nf=Nf,pft=pft.f),priors)
   
   ## Analysis
   update = c(list(Y=No[t,],R=solve(R),N=3),priors)
   mod <- rjags::jags.model(file=textConnection(AnalysisSSMDMP),
                            data=update,
                            n.adapt=1000,n.chains=3)
-  jdat <- rjags::coda.samples(mod,n.iter=2000) ## burn-in 
+  jdat <- rjags::coda.samples(mod,variable.names="X",n.iter=2000) ## burn-in 
   jdat <- rjags::coda.samples(mod,variable.names=c("X","rho","x"),n.iter=10000) 
   
   ## update parameters & save Analysis posterior
@@ -205,11 +227,14 @@ for(t in 1:NT){
           ca = d.class.post)
   Ca <- Na[,1] ## updated class assignments
   Na <- tobit(Na[,-1])
-#  sel.ic <- sample.int(nrow(dat), ne, replace=TRUE)
-#  Na <- dat[sel.ic,nsel]
+  sel.pft = which(dist.pft[Ca]>0)
+  if(length(sel.pft)>0){
+    pft.a[sel.pft] = dist.pft[Ca[sel.pft]]  ## update PFT assignment
+  }
   Analysis[[t]] <- list(MCMC=dat,
-                        Na = Na,
-                        Ca = Ca)
+                        Na  = Na,
+                        Ca  = Ca,
+                        pft = pft.a)
 }
 
 ```
@@ -226,6 +251,9 @@ lines(post.dist[2,],col=2)
 lines(post.dist[3,],col=3)
 legend("topright",legend=c("undisturbed","harvest","defoliation"),
        lwd=2,col=1:3)
+
+post.pft = sapply(X=Analysis,function(y){mean(y$pft)})
+plot(post.pft,type='l')
 
 pool.names=c("Cleaf","Csoil","Cstem")
 for(i in 1:3){
@@ -247,9 +275,10 @@ for(i in 1:3){
   lines(Ntrue[,i],lty=2,lwd=2)
 }
 ```
+
 ### Ensemble adj at time of disturbance
 
-```{r,fig.asp=1,fig.width=3}
+```{r,fig.asp=1,fig.width=6}
 #par(mfrow=c(1,3))
 
 plot(Analysis[[10]]$Na[,1],Analysis[[10]]$Na[,3],pch=Analysis[[10]]$Ca,col=ecoforecastR::col.alpha("red",alpha=0.5),
