--- a/discussion.Rmd
+++ b/discussion.Rmd
@@ -14,6 +14,10 @@
     * for $\rho$ handle the covariances of nearby sites -- disturbance in one usually increases the probability of disturbance in others
     * similarly, need to be able to compose Multisite $\mu_f$ and $P_f$, from individual site values with reasonable approximations of cross-[site x pool] correlations
 
+* Discussion of similar approaches
+[@Ye2020]
+
+
 * Implications  (borrow text from CMS proposals)
   * Improving MRV
   * Recovery forecasting
